--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^9.1.1",
     "mysql2": "^3.14.3",
     "node-fetch": "^2.7.0",
     "uuid": "^11.1.0"
